@@ -1376,3 +1376,7 @@
 2013-05-27 Seunggyun Kim
         * Add elm_config_glayer_long_tap_start_timeout_set/get,
         elm_config_glayer_double_tap_timeout_set/get
+
+2013-05-30 ChunEon Park
+        * Fix the mapbuf to be enabled before it's content is entirely rendered
+        once.
